--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -659,7 +659,7 @@ header {
   right: 0;
   width: 100%;
   text-align: center;
-  background: url(../images/background.png) #4276b6;
+  background: white;
   -moz-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
   -o-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
@@ -694,8 +694,8 @@ header p {
   margin-right: -382px;
   position: fixed;
   top: 115px;
-  background: #ffcc00;
-  border: 1px solid #f0b500;
+  background: #525252;
+  border: 1px solid #525252;
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -o-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
@@ -709,13 +709,13 @@ header p {
   padding-right: 10px;
 }
 #banner .button {
-  border: 1px solid #dba500;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #ffce38));
-  background: -webkit-linear-gradient(#ffe788, #ffce38);
-  background: -moz-linear-gradient(#ffe788, #ffce38);
-  background: -o-linear-gradient(#ffe788, #ffce38);
-  background: -ms-linear-gradient(#ffe788, #ffce38);
-  background: linear-gradient(#ffe788, #ffce38);
+  border: 1px solid #aaaaaa;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #E4E5E6), color-stop(100%, #ADADAD));
+  background: -webkit-linear-gradient(#E4E5E6, #ADADAD);
+  background: -moz-linear-gradient(#E4E5E6, #ADADAD);
+  background: -o-linear-gradient(#E4E5E6, #ADADAD);
+  background: -ms-linear-gradient(#E4E5E6, #ADADAD);
+  background: linear-gradient(#E4E5E6, #ADADAD);
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
@@ -726,7 +726,7 @@ header p {
   -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
   -o-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
-  background-color: #FFE788;
+  background-color: #E4E5E6;
   margin-left: 5px;
   padding: 10px 12px;
   margin-top: 6px;
@@ -738,13 +738,13 @@ header p {
   text-align: center;
 }
 #banner .button:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #ffe788));
-  background: -webkit-linear-gradient(#ffe788, #ffe788);
-  background: -moz-linear-gradient(#ffe788, #ffe788);
-  background: -o-linear-gradient(#ffe788, #ffe788);
-  background: -ms-linear-gradient(#ffe788, #ffe788);
-  background: linear-gradient(#ffe788, #ffe788);
-  background-color: #ffeca0;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #E4E5E6), color-stop(100%, #E4E5E6));
+  background: -webkit-linear-gradient(#E4E5E6, #E4E5E6);
+  background: -moz-linear-gradient(#E4E5E6, #E4E5E6);
+  background: -o-linear-gradient(#E4E5E6, #E4E5E6);
+  background: -ms-linear-gradient(#E4E5E6, #E4E5E6);
+  background: linear-gradient(#E4E5E6, #E4E5E6);
+  background-color: #E4E5E6;
 }
 #banner .fork {
   position: fixed;
@@ -754,7 +754,7 @@ header p {
   margin-top: 6px;
   line-height: 14px;
   font-size: 14px;
-  background-color: #FFE788;
+  background-color: #E4E5E6;
 }
 #banner .downloads {
   float: right;
@@ -764,7 +764,7 @@ header p {
   float: left;
   line-height: 52px;
   font-size: 90%;
-  color: #9d7f0d;
+  color: #E4E5E6;
   text-transform: uppercase;
   text-shadow: rgba(255, 255, 255, 0.2) 0 1px 0;
 }
@@ -779,7 +779,7 @@ header p {
   display: inline;
 }
 #banner ul li a.button {
-  background-color: #FFE788;
+  background-color: #E4E5E6;
 }
 #banner #logo {
   position: absolute;
@@ -1007,4 +1007,28 @@ footer {
     bottom: auto;
     width: auto;
   }
+}
+
+.hydra-logo-text {
+  height: 75px;
+  width: 400px;
+  display: inline-block;
+  background: url(../images/big-hydra-text.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.hydra-logo-hydra {
+  height: 75px;
+  width: 70px;
+  display: inline-block;
+  background: url(../images/small-hydra-no-text.png);
+  background-size: 100%;
+  background-repeat: no-repeat; 
+}
+
+.avatar img {
+  border: 1px solid #e5e5e5;
+  height: 25px;
+  width: 25px;
+  vertical-align: middle;
 }
