Adds architecture images to project site, updates copy.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1032,3 +1032,9 @@ footer {
   width: 25px;
   vertical-align: middle;
 }
+
+.architecture {
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+}
